# medical_RAG

./: .gitignore  README.md  dockerfile  loadtest.py  pyproject.toml  requirements.txt
RAG/: qdant.py
chatbot-ui/: index.html  package-lock.json  package.json  vite.config.ts
chatbot-ui/src/: App.tsx  index.css
chatbot-ui/src/components/: Chatbot.tsx  FileManager.tsx
frontend/chatbot-streaming/: package-lock.json  package.json
frontend/chatbot-streaming/src/: Chatbot.jsx
src/: app.py  poc.py  requirements.txt
src/RAG/: qdant.py
src/adaptors/: qdrant_adaptors.py
src/chatbot/: chatbot.py
src/common/utils/: text_utils.py
src/services/: chatbot.py  qdant.py  text_cleaner.py  thai_to_vec_embedder.py
src/tests/: qdant_CRUD.py
src/utilities/: text_utils.py
