[tool.poetry]
name = "medical-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qdrant-client = "^1.12.1"
langchain-community = "^0.3.9"
pypdf = "^5.1.0"
langchain-qdrant = "^0.2.0"
langchain-openai = "^0.2.10"
python-dotenv = "^1.0.1"
streamlit = "^1.40.2"
langchain = "^0.3.10"
langgraph = "^0.2.56"
pythainlp = "^5.0.5"
gensim = "^4.3.3"
typing-extensions = "^4.12.2"
pydantic = "^2.10.4"
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
langchain-core = "^0.3.28"
langchain-text-splitters = "^0.3.4"
uuid = "^1.30"
websockets = "^14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
